--- a/iOSCaelum/ContatosNoMapaVC.xib
+++ b/iOSCaelum/ContatosNoMapaVC.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ContatosNoMapaVC">
             <connections>
+                <outlet property="mapa" destination="OBE-ZO-g7c" id="uoN-I1-PDl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
